--- a/restaurant.html
+++ b/restaurant.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="icon" href="favicon.ico">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -15,12 +16,12 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+    <nav aria-label="Breadcrumb">
+      <h1><a aria-current="page" href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+    <ul aria-label="Breadcrumb" id="breadcrumb" >
+      <li><a aria-current="page" href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -30,22 +31,22 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section aria-label="map" id="map-container">
+      <div role="application" id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <section aria-label="restaurant info" id="restaurant-container">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <table aria-label="restaurant hours" id="restaurant-hours"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <section aria-label="restaurant reviews" id="reviews-container">
+      <ul aria-label="reviews list" id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
   </main>
@@ -63,7 +64,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq_kkDXGXgIGXOvEiACvspMAM2PvlhN_Y&libraries=places&callback=initMap"></script>
+   <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq_kkDXGXgIGXOvEiACvspMAM2PvlhN_Y&libraries=places&callback=initMap"></script>-->
   <!-- End scripts -->
 
 </body>
